tests/class_munging/class_munging.exp
Error ---------------------------------------------------- with_munging.js:13:11

Cannot call `this._method` because property `_method` is missing in `Bar`.

Error: with_munging.js:13
 13:     (this._method(): string); // error
               ^^^^^^^ Cannot call `this._method` because property `_method` is missing in `Bar` [1].
  References:
   11: class Bar extends Foo {
             ^^^ [1]: `Bar`


Found 1 error
